--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -100,12 +100,10 @@
     <Compile Include="Assets\Unity Runtime Recorder\Scripts\UnityAnimSaver\UnityBlendShapeAnimation.cs" />
     <Compile Include="Assets\Unity Runtime Recorder\Scripts\UnityAnimSaver\UnityCurveContainer.cs" />
     <Compile Include="Assets\Unity Runtime Recorder\Scripts\UnityAnimSaver\UnityObjectAnimation.cs" />
-    <None Include="Assets\Report\MetricReportingGen_120119_1731.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\ReportIterationStatistics_120119_1727.txt" />
-    <None Include="Assets\Report\IterationStatistics_120119_1731.txt" />
-    <None Include="Assets\Report\MetricReportingInd_120119_1731.txt" />
+    <None Include="Assets\PurchasedAssets_MMO\Mannequin_Doll\ReadMe.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\ReportMetricReportingInd_120119_1727.txt" />
