--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Scripts\DirectorScript.cs" />
     <Compile Include="Assets\Scripts\DynamicObstacleController.cs" />
     <Compile Include="Assets\Scripts\ObstacleController.cs" />
+    <Compile Include="Assets\Scripts\PlaybackController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\RRTAlgo.cs" />
     <Compile Include="Assets\Unity Runtime Recorder\Scripts\AnimationRecorderHelper.cs" />
