--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Scripts\PlaybackController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\RRTAlgo.cs" />
+    <Compile Include="Assets\SelectionController.cs" />
     <Compile Include="Assets\Unity Runtime Recorder\Scripts\AnimationRecorderHelper.cs" />
     <Compile Include="Assets\Unity Runtime Recorder\Scripts\BigNumber\BigInteger.cs" />
     <Compile Include="Assets\Unity Runtime Recorder\Scripts\FbxExporter\FbxConnectionObj.cs" />
